# serrynaimo-agent

./: .gitignore  NOTICE  README.md
server/: .env.example  apple_mail.py  bot.py  calibration.py  design_voice.py  fuzzy.py  mcp_toolsets.py  memory_store.py  notes_memory_store.py  notification_store.py  notification_watcher.py  pcc-deploy.toml  pyproject.toml  recall_repro4.py  request_permissions.py  services_local.py
server/lean-client/: index.html
server/serrynaimo/: index.html
